Bug 384254 - window title not updated when switching tab
Summary: window title not updated when switching tab
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.6.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-09-01 07:33 UTC by Thomas Monjalon
Modified: 2017-09-03 19:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Monjalon 2017-09-01 07:33:12 UTC
The name of the current folder is displayed in the window title.
When opening a folder in a new tab, the window title is updated.
But when selecting another old tab, the title is not updated.
Comment 1 Laurent Montel 2017-09-01 08:58:13 UTC
I confirm it.
I will work on it soon.
Comment 2 Laurent Montel 2017-09-01 11:51:07 UTC
Git commit e5b25cbd01bc0966bb8f07032833cb9ace7b7585 by Montel Laurent.
Committed on 01/09/2017 at 11:50.
Pushed by mlaurent into branch 'master'.

Fix Bug 384254 - window title not updated when switching tab

FIXED-IN: 5.7.0

M  +1    -1    CMakeLists.txt
M  +6    -0    messagelist/src/core/widgetbase.cpp
M  +1    -0    messagelist/src/core/widgetbase.h
M  +9    -0    messagelist/src/pane.cpp
M  +3    -0    messagelist/src/pane.h

https://commits.kde.org/messagelib/e5b25cbd01bc0966bb8f07032833cb9ace7b7585
Comment 3 Laurent Montel 2017-09-01 11:51:37 UTC
Git commit e7f2298d6fe4a6c85ec865ce636fcb4122fe5637 by Montel Laurent.
Committed on 01/09/2017 at 11:51.
Pushed by mlaurent into branch 'master'.

Fix Bug 384254 - window title not updated when switching tab

M  +1    -1    CMakeLists.txt
M  +1    -0    src/kmmainwidget.cpp

https://commits.kde.org/kmail/e7f2298d6fe4a6c85ec865ce636fcb4122fe5637
Comment 4 Thomas Monjalon 2017-09-03 19:48:08 UTC
Thanks a lot