Fix Bug 384254 - window title not updated when switching tab

FIXED-IN: 5.7.0
BUG: 384254